<resources>
    <string name="app_name">Spatial Sound Demo</string>
    <string name="app_id">App ID:</string>
    <string name="app_token">Token:</string>
    <string name="action_settings">Settings</string>
    <string name="optional">Optional</string>

    <string name="next">Go</string>
    <string name="previous">Back</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="channel_name">Channel Name:</string>
    <string name="spacial_sound_demo">Local Spatial Sound</string>
    <string name="spacial_sound_demo2">Remote Spatial Sound</string>

    <string name="start">Start</string>
    <string name="click_start">Start</string>
    <string name="resume">Resume</string>

    <string name="spatial_sound_tip">Please insert headphones to experience the spatial audio effect</string>
    <string name="spatial_sound_tip_dragging">Now you can move the speaker icon to experience the spatial audio effect</string>
    <string name="spatial_sound_tip_playing">You will hear a piece of music, and after 10 seconds this piece of music will be played through spatial audio effects</string>

</resources>