<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.agora.nathan.spatialsound.HomeFragment">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/demo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spacial_sound_demo"
        android:layout_weight="1.0"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

        <Button
            android:id="@+id/btn_demo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/next"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/top_layout2"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/demo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spacial_sound_demo2"
            android:textSize="20dp"
            android:layout_weight="1.0"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp" />
        <Button
            android:id="@+id/btn_demo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/next"
            />
    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="460dp"
        android:text="@string/spatial_sound_tip"
        android:textColor="@android:color/black"
        android:textSize="14sp" />
</FrameLayout>